sec:Ergebnisse: Hypo I gemäss DGP Beispiel

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -56,6 +56,7 @@ Die \textit{emotionale Selbstregulierung} bezeichnet die Fähigkeit, innerer Gef
 Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und andere Menschen beeinflusst (vgl. Kapitel \titleref{sec:Bindung}, S. \pageref{sec:Bindung}). Diese Gefühle wiederum, beeinflusst die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsichere Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann das kindliche Verständnis zwischenmenschlicher Beziehung insofern beeinflussen, welche Formen des emotionalen Ausdrucks angemessen und effektiv ist \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kinder von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \cite{Eisenberg1998, McDowell2000}. 
 
 \paragraph{TBD:Bindung}\label{par:Bindung}
+
 \begin{itemize}
     \item Bindung aus diversen Quellen
     \begin{itemize}
@@ -70,7 +71,7 @@ Bindungserfahrungen in den ersten Jahren beeinflusst die Entwicklung des Selbstg
 Das \textit{Selbstwertgefühl} ist ein wichtiges Element des Selbstkonzepts und bezeichnet die allgemeine Bewertung des Selbst und die Gefühle, die durch diese Bewertung erzeugt werden \cite{Crocker2001}. Das Selbstwertgefühl ist insofern wichtig, da es ein Prädiktor für die Zufriedenheit der Menschen in ihrem Leben darstellt. Individuen mit einem tiefen Selbstwertgefühl neigen dazu, sich wertlos, deprimiert und hoffnungslos zu fühlen, im Gegenzug zu Menschen, die ein hohes Selbstwertgefühl besitzen und die sich im Allgemeinen eher gut fühlen und hoffnungsvoll sind \cite{Harter1999}. Eine der wichtigste Einflussfaktoren auf den Selbstwert von Kindern ist die Anerkennung und Unterstützung, die sie von anderen erhalten \cite{Siegler2008}. Eltern, die ihrem Kind gegenüber mit Anerkennung und Interesse auftreten und die unterstützende und doch strenge Erziehungsmethoden anwenden, haben meistens auch Kinder mit hohem Selbstwertgefühl \cite{Feiring1996}. Hingegen bringen Eltern, die das Verhalten ihrer Kinder herabsetzen oder sie zurückweisen, ihnen tendenziell ein Gefühl der Wertlosigkeit bei \cite{Harter1999}. 
 
 % ---------------------------------------
-\subsection{TBD: Medienverhalten der Eltern}\label{sec:Medienverhalten}
+\subsection{Medienverhalten der Eltern}\label{sec:Medienverhalten}
 Unter dem Medienverhalten der Eltern laufen viele Faktoren zusammen. Wie bereits erläutert, definiert sich diese Arbeit über das Medienverhalten der Eltern und soll unter dem Gesichtspunkt der Bindung, dem Stress und dem subjektiven Wohlbefinden betrachtet werden. Diese theoretischen Konstrukte werden im Folgenden für die in dieser Arbeit notwendigen Tiefe behandelt.
 % ---------------------------------------
 \subsubsection{TBD: Bindung}\label{sec:Bindung}
