--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -221,7 +221,9 @@ Im Folgenden werden die konzeptionellen Hypothesen aus Kapitel \titleref{sec:Fra
 
 
 \subsection{Statistische Analyseverfahren}
-Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde mittels Sichtvergleich vorgenommen. Dazu wurde eine Grafik der Häufigkeitsverteilung der Stichprobendaten mit einem Bild einer Normalverteilung verglichen. Diese optische Prüfung erfolgte mit Hilfe von SPSS und der Darstellung eines Histogramms, das mit einer Häufigkeitsauszählung und der Darstellung der Normalverteilungskurve ausgegeben wurde. Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Hypothesen berechnet. Für die Voraussetzungen der einfaktoriellen Varianzanalyse soll die Homogenität der Varianzen mittels Levene-Test geprüft werden. Für die Voraussetzungen der einfachen linearen Regressionsanalyse soll die Linearität des Zusammenhangs, der bedingte Erwartungswert (Gauss-Markov-Annahme 3) und die Homoskedastiziät (Gauss-Markov-Annahme 5) visuell mittels Streudiagramm geprüft werden \cite{UniversitatZurich2018}.
+Für die Datenauswertung wurde in einem ersten Schritt eine deskriptive, univariate Analyse der Stichprobendaten durchgeführt. Dies ermöglichte die Erfassung möglicher Fehler bei der Datenerfassung und die Entdeckung möglicher Ausreisser im Datensatz. Dies erfolgte mittels Häufigkeitsverteilung, um die verschiedenen Merkmalsausprägungen einer Variable im Datensatz zu beschreiben, und mittels Verteilungsparameter (Lage- und Streuungsparameter). Des Weiteren wurde die Schiefe der Häufigkeitsverteilung gegenüber der Normalverteilung überprüft. Die Prüfung der Normalverteilung wurde einerseits mittels Shapiro-Wilks-Test \cite{Shapiro1965} und mittels Sichtvergleich vorgenommen. Für den Sichtvergleich kam einerseits ein Histogramm zum Einsatz, welches die Verteilung der Daten grafisch darstellt \cite{Hemmerich2018}. Bei normalverteilten Daten sollte das Histogramm ein klassisch glockenförmiges Aussehen aufweisen. Zudem soll ein Q-Q-Plot erstellt werden, um die Daten visuell auf Normalverteilung zu prüfen \cite{Hemmerich2018}. 
+
+Anschliessend an die deskriptive Analyse wurden in einem weiteren Schritt die statistischen Zusammenhänge der Stichprobendaten für die Hypothesen berechnet. Für die Voraussetzungen der einfaktoriellen Varianzanalyse soll die Homogenität der Varianzen mittels Levene-Test geprüft werden. Für die Voraussetzungen der einfachen linearen Regressionsanalyse soll die Linearität des Zusammenhangs, der bedingte Erwartungswert (Gauss-Markov-Annahme 3) und die Homoskedastiziät (Gauss-Markov-Annahme 5) visuell mittels Streudiagramm geprüft werden \cite{UniversitatZurich2018}.
 
 Die Beantwortung der Hypothese 1 erfolgt mittels einfaktoriellen Varianzanalyse, engl. ANOVA (Analysis of Variance). Dabei soll das Signifikanzniveau $\alpha=0.05$ und die Teststärke mindesten $1-\beta=0.95$ betragen. Es wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant angesehen $f = 0.25$. Der Bindungsstil stellt dabei den zweistufigen Faktor, resp. die unabhängige Variable dar (Faktorstufen sicher / unsicher). Die Abhängige Variable wird mit der Mediennutzung besetzt. Die Nullhypothese $H1_{0}$ lautet: Die Bindung hat keinen signifikanten Einfluss auf die Mediennutzung. Demzufolge lautet die Alternativhypothese $H1_{1}$: Die Bindung hat einen signifikanten Einfluss auf die Mediennutzung.
 
