--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \pagenumbering{arabic}
 
 % Einleitende Theorie
-\section{Einleitende Theorie}\label{sec:EinleitendeTheorie}
+\section{Theorie}\label{sec:Theorie}
 \input{content/0_Einleitung.tex}
 \input{content/1_theorie.tex}
 
