--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -115,7 +115,8 @@ Der Indexwert der Subjective Happiness Scale (SHS) $SHS~I$ beläuft sich in dies
 
 % ---------------------------------------
 \subsection{Hypothesentest} \label{sec:Hypothesentest}
-Der Hypothesentest für Hypothese 1 mittels ANOVA liefert ein nicht-signifikantes Er\-gebnis. Die Bindung von sicher und unsicher hat keinen signifikanten Einfluss auf die ge\-samte Medien\-nutzung der Stichprobe ($F$(1,202) = .144, $p$=.704, partielles $\eta^2$=.001, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H1_{0}$ angenommen werden. 
+Für die Überprüfung der Hypothese 1 mittels einfaktoriellen Varianzanalyse fiel die Prüfung der Abhängigen Variable Mediennutzuung, die in zwei Faktorstufen sicher und unsicher gebunden aufgeteilt wurde, mittels Shapiro-Wilks-Test \cite{Shapiro1965} signifikant aus (Shapiro-Wilks-Test; $p_{sicher}$ = .000, $p_{unsicher}$ = .00). Somit kann von einer Abweichung von der Normalverteilung ausgegangen werden \cite{Hemmerich2018}. Gemäss \citeA{UniversitatZurich2018} sind Verletzungen ab einer Gruppe von 25 Probanden in der Regel unproblematisch. Da sich die Gruppe sicher aus $N$=144 und die Gruppe unsicher aus $N$=60 zusammensetzten, wurde die Berechnung weiter geführt. Zudem wurde geprüft, dass die Varianzhomogenitätsannahme nicht verletzt wurde (Levene-Test; $p$ = .683). Der Hypothesentest für Hypothese 1 mittels ANOVA liefert ein nicht-signifikantes Er\-gebnis. Die Bindung von sicher und unsicher hat keinen signifikanten Einfluss auf die ge\-samte Medien\-nutzung der Stichprobe ($F$(1,202) = .144, $p$=.704, partielles $\eta^2$=.001, $n$=204). Basierend auf diesen Ergebnissen muss die Nullhypothese $H1_{0}$ angenommen werden. 
+
 
 Der Hypothesentest für die Hypothese 2 mittels einfacher linearer Regression liefert ein nicht signifikantes Ergebnis. Das Stressempfinden der Eltern geht somit nicht mit einer höheren Mediennutzung einher (F(1,202) = .389, $p$=.533). Die Nullhypothese $H2_{0}$ muss angenommen werden.
 
