--- a/content/Anhang/TabellenMediennutzung.tex
+++ b/content/Anhang/TabellenMediennutzung.tex
@@ -1,4 +1,4 @@
-
+Im Folgenden werden Tabellen und Abbildungen der Mediennutzung dargestellt. 
 
 \begin{figure}[htp]
 \caption{Medien \& Mediennutzung}\label{fig:AppMedienMediennutzung}
