--- a/content/Anhang/TabellenPSQ.tex
+++ b/content/Anhang/TabellenPSQ.tex
@@ -1,5 +1,5 @@
 %Table
-\begin{table}%[htbp]
+\begin{table}[ht]
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
