--- a/content/Anhang/Umfragebogen.tex
+++ b/content/Anhang/Umfragebogen.tex
@@ -1,7 +1,8 @@
 Der im Folgenden abgebildete Fragebogen stellt eine leichte Abwandlung des originalen Onlinefragebogens dar, da die Umsetzung der grafischen Elemente zwecks Lesbarkeit in diesem Dokument vereinfacht wurden. Inhaltlich wurden keine Anpassungen vorgenommen.
 
 \begin{flushleft}
-\subsection{Startseite}
+\textbf{Startseite}
+
 \textbf{Herzlich willkommen zum Elternfragebogen}
 
 \vspace{2mm}
@@ -21,7 +22,8 @@ Am Schluss der Umfrage haben Sie die Möglichkeit, an der Verlosung der Gutschei
 
 Bei Fragen und Rückmeldungen zur Studie können Sie sich per Mail an Till ERNST, Stud. MSc in Applied Psychology, ernsttil@students.zhaw.ch wenden. Durch klicken von 'Weiter' bestätigen Sie, diese Informationen gelesen zu haben, und erklären sich mit der Teilnahme einverstanden.
 
-\subsection{Demografische Daten}
+\bigskip
+\textbf{Demografische Daten}
 Zuerst folgen ein paar Angaben zu Ihrer Person und Ihrem Kind im Alter zwischen 0 und 1 Jahr. Falls Sie mehrere Kinder in diesem Alter betreuen, entscheiden Sie sich für dasjenige, das Sie am häufigsten betreuen. Gehen Sie in den folgenden Fragen immer vom gleichen Kind aus.
 
 \begin{longtable}[c]{ |p{1em}|p{16em}|p{16em}| }
@@ -58,7 +60,8 @@ Zuerst folgen ein paar Angaben zu Ihrer Person und Ihrem Kind im Alter zwischen 
   
 \end{longtable}
 
-\subsection{Medien und Mediennutzung}\label{sec:app_mediennutzung}
+\bigskip
+\textbf{Medien und Mediennutzung}\label{sec:app_mediennutzung}
 Im Folgenden werden Sie gebeten, Angaben über verschiedene Medien-Tätigkeiten so exakt wie möglich zu machen, die Sie während der Betreuung von Ihrem Kind ausüben. Stellen Sie sich dabei die letzte Situation vor, in der Sie während mindestens zwei Stunden alleine mit Ihrem Kind waren.
 
 \vspace{2mm}
