--- a/content/Anhang/TabellenAAS.tex
+++ b/content/Anhang/TabellenAAS.tex
@@ -1,7 +1,7 @@
-Die folgenden Tabellen stellen die Skalenwerte der Adult Attachement Scale (AAS) dar.
+Die folgenden Tabellen stellen die Skalenwerte der Adult Attachement Scale (AAS) dar. Einmal mit dem Skalenwertebereich von 1 bis 5 (\ref{table:AppAASDeskriptiv}) und einmal mit dem transformierten Wertebereich 0 bis 100 (\ref{table:AppAASDeskriptivTrans}).
 
 %Table
-\begin{table}%[htbp]
+\begin{table}[ht]
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
@@ -18,7 +18,7 @@ Die folgenden Tabellen stellen die Skalenwerte der Adult Attachement Scale (AAS)
 \end{table}
 
 %Table
-\begin{table}%[htbp]
+\begin{table}[ht]
 \begin{tabular}{m{7em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
