sec:theorie - bindung kind

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -55,15 +55,16 @@ Die \textit{emotionale Selbstregulierung} bezeichnet die Fähigkeit, innerer Gef
 
 Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und andere Menschen beeinflusst (vgl. Kapitel \titleref{sec:Bindung}, S. \pageref{sec:Bindung}). Diese Gefühle wiederum, beeinflusst die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsichere Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann das kindliche Verständnis zwischenmenschlicher Beziehung insofern beeinflussen, welche Formen des emotionalen Ausdrucks angemessen und effektiv ist \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kinder von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \cite{Eisenberg1998, McDowell2000}. 
 
-\paragraph{TBD:Bindung}\label{par:Bindung}
+\paragraph{Bindung}\label{par:Bindung}
+Unter Bindung wird eine emotionale Beziehung zu einer bestimmten Person verstanden, die räumlich und zeitlich Bestand hat \cite[S.~585ff]{Siegler2008}. Die frühe Beziehungen der Kinder zu ihren Eltern beeinflusst die Art der Interaktionen mit anderen Menschen vom Kleinkindalter bis zum Erwachsenenalter, sowie ihr Selbstwertgefühl. Bindung kann als eine besondere Art einer affektiv getragenen sozialen Beziehung zwischen dem Kind und einer bevorzugten Person, die als stärker und klüger angesehen wird, verstanden werden \cite{Biringen1994}. Diese Gefühlsbeziehung zwischen dem Kind und der primären Bezugsperson wird auch als dyadische Beziehung in der psychoanalytischen Lieteratur beschrieben \cite{Resch1999}. Die Bindungstheorie wurde von John \citeA{Bowlby1969, Bowlby1973, Bowlby1988} und \citeA{Ainsworth1978} entwickelt und konzeptualisisert. Bolwbys Bindungstheorie ist stark von den Lehren Freuds beeinflusst. Insbesondere dadurch, dass die frühsten Beziehungen der Säuglinge zu ihren Müttern ihre späte Entwicklung formen \cite{Siegler2008}. Zudem wurde die Theorie interdisziplinär formuliert und hat ihre Wurzeln neben der psychonalytischen auch in der ethologischen und kognitiven Wissenschaft \cite{Resch1999}. Die Bindungstheorie beschreibt die angeboren Tendenz des menschlichen Individuums, starke Gefühlsbande zu spezifischen Personen der Umgebung zu bilden. Eine Zerstörung dieser Bande durch Trennung oder Verlust zu einer Bezugsperson kann zu affektiven Störungen führen \cite{Resch1999}. 
 
-\begin{itemize}
-    \item Bindung aus diversen Quellen
-    \begin{itemize}
-        \item Bindung und Bindungsverhalten S.98 \citeA{Resch1999} (Buch von Marc)
-        \item Bindungstheorie S.583ff \citeA{Siegler2008} (Buch Jeannette)
-    \end{itemize}
-\end{itemize}
+Bindung wir durch die Präferenz einer Bezugsperson charakterisiert, wobei ein Kind unterschiedliche Bindungsarten zu unterschiedlichen Bezugspersonen entwickeln kann. Es werden vier Hauptcharakteristiken der Bindung unterschieden: (1) Angst inhibitiert das Spiel- und Probierverhalten und verstärkt die Bindung. (2) Bei Anwesenheit einer Bezugsperson wird das Explorationsverhalten des Kindes in der Umgebung gefördert (engl. secure base phenomenon). (3) Ist die Bezugsperson anwesend, so verringert sich die Angst des Kindes in Krisensituationen und ungwohnten Sitautionen. (4) Erfolgt eine Trennung zur Bezugsperson, so wird mit Protest darauf reagiert \cite{Resch1999}. Somit ist das Bindungsverhalten die universelle Tendenz des Kindes, nach Nähe und Zuwendung zu einer Bezugsperson in Belastungssituationen zu suchen. Fehlt eine Bezugsperson, so kann das Kind auf dieser Suche auch Ersatzobjekte mit Bindung belegen \cite{Resch1999}.
+
+Nach Bolwby findet die anfängliche Entwicklung von Bindung in vier Phasen statt \cite{Siegler2008}: (1) \textit{Vorphase der Bindung} (Geburt bis 6 Wochen). Das Kind reagiert auf alle Personen in seiner Umgebung mit universellen Mustern. (2) \textit{Entstehende Bindung} (6 Wochen bis 6 - 8 Monate). Das Kind reagiert bevorzugt auf vertraute Personen und entwickelt Erwartungen, wie ihre Fürsorger auf ihre Bedürfnisse reagieren und ein Gefühl, wie sehr sie ihnen vertrauen können. (3) \textit{Ausgeprägte Bindung} (zwischen 6 - 8 Monaten und $1\nicefrac{1}{2}$ - 2 Jahren. Das Kind zeigt ein selektives Bindungsverhalten und sucht die Nähe der Bezugsperson. Für die meisten Kinder dient die Mutter als sichere Basis. (4) \textit{Reziproke Beziehung} (von $1\nicefrac{1}{2}$ oder 2 Jahren an). Die rapide ansteigenden kognitiven und sprachlichen Fähigkeiten der Kinder ermöglicht ihnen, die Gefühle, Ziele und Motive der Eltern zu verstehen. Es ist zu Empathie fähig.
+
+Bindung soll nicht mit Abhängigkeit verwechselt werden \cite{Schmidt1996}. Bindung scheint die Autonomieentwicklung des Kindes zu fördern, beruht auf einer geglückten gegenseitigen Beziehung und ist somit ein Merkmal der Interaktion. Vier Typen von Bindung können beschrieben werden \cite{Resch1999}: (1) \textbf{Sichere Bindung (Typ B):} Das Kind kann eine ausgewogene Balance zwischen der Suche nach Nähe und dem Explorationsverhalten im Beisein der Hauptbezugsperson aufrecht halten. Bei Trennung zeigt es Irritation, sucht nach Kontakt und lässt sich bei der Rückkehr der Bezugsperson leicht beruhigen. (2) \textbf{Unsicher vermeidenden Bindung (Typ A):} Im Beisein der Bezugsperson zeigt das Kind eine Pseudounabhängigkeit und scheint ihr gegenüber gleichgültig zu sein. Bei Trennung zeigt das Kind nur wenig Irritation, äussert bei Wiedervereinigung mit der Bezugsperson deutliche Ablehnung. Dieses äussere Desinteresse geht jedoch gemäss \citeA{Biringen1994} mit einer erhöhten inneren Erregung einher. (2) \textbf{Die ambivalent unsichere Bindung (Typ C):} Gekennzeichnet wird dieser Typ durch einen besondere Abhängigkeit zur Bezugsperson. Bei Trennung ist das Kind sehr irritiert, zeigt eine Kombination von Näheverhältnis und Verweigerung, und lässt sich bei der Wiedervereinigung nur schwer beruhigen. (4) \textbf{Desorganisierter Bindungstyp (Typ D):} Das Kind zeigt bei der Trennung keine konsistente Stressbewältigungsstrategie. Das Verhalten ist oft konfus oder sogar widersprüchlich \cite{Siegler2008}. Diese Bindungstypen wurden durch ein von \citeA{Ainsworth1978} entwickeltes Untersuchungsverfahren, das \enquote{Strange Situation Procedure}, entwickelt. Dabei wurden bei nicht klinischen Gruppen folgende Befunde erhoben: Etwa 57\% der Kinder waren in einer sicheren Bindung, 26\% zeigten ein unsicher-vermeidendes und 17\% ein ambivalent-unsicheres Bindungsmuster. Das vierte Bindungsmuster (Typ D) wird nur selten und vornehmlich in high-risk Gruppen von Kindern gefunden \cite{Resch1999}.
+
+Sicher gebundene Kinder zeigen im Kindergarten und Schule ein adäquateres Sozialverhalten, mehr Phantasie und positive Affekte beim Spiel, ein höheres Selbstwertgefühl, weniger depressive Sympotme und eine längere Aufmerksamkeitsspanne \cite{Dornes1993, Zeanah1994}. Sicher gebundene Kinder scheinen im späteren Lebensalter offener und aufgeschlossener für neue Sozialkontakte mit Gleichaltrigen und Erwachsenen zu sein, als vermeidend- oder ambivalent-unsichere Kinder \cite{Resch1999}. Zudem zeigen Kinder, die mit einem Jahr als sicher gebunden eingeschätzt werden, mit 6 Jahren signifikant weniger Psychopathologie als unsicher gebundene \cite{Lewis1984}.
 
 \paragraph{Die Entwicklung des Selbst und das Selbstwertgefühl}\label{par:EntwSelbst}
 Bindungserfahrungen in den ersten Jahren beeinflusst die Entwicklung des Selbstgefühls. Die Vorstellung vom Selbst bei Kindern entsteht in den ersten Lebensjahren durch die Interaktionen mit andern ihnen wichtigen Bezugspersonen. Sie entwickelt sich bis ins Erwachsenenalter wobei sie mit der emotionaler und kognitiver Entwicklung mit steigendem Alter komplexer wird \cite[S.~602ff]{Siegler2008}. Vielen Theorien zufolge entwickelt sich das Selbstgefühl bei Säuglingen und Kleinkindern aufgrund der Erkenntnis, dass ihre eigenen Handlungen Gegensände, wie z.B. ein Modbile oder Menschen dazu veranlassen auf vorhersehbare Weise zu reagieren \cite{Harter1998}. Eltern, die sensibel auf die Signale ihre Kinder reagieren und sie ermutigen, ihre Umgebung zu erkunden, sind gegenüber ihren Altersgenossen bezüglich der Entwicklung ihres Selbst häufig voraus \cite{Pipp1992}. 
@@ -73,8 +74,11 @@ Das \textit{Selbstwertgefühl} ist ein wichtiges Element des Selbstkonzepts und 
 % ---------------------------------------
 \subsection{Medienverhalten der Eltern}\label{sec:Medienverhalten}
 Unter dem Medienverhalten der Eltern laufen viele Faktoren zusammen. Wie bereits erläutert, definiert sich diese Arbeit über das Medienverhalten der Eltern und soll unter dem Gesichtspunkt der Bindung, dem Stress und dem subjektiven Wohlbefinden betrachtet werden. Diese theoretischen Konstrukte werden im Folgenden für die in dieser Arbeit notwendigen Tiefe behandelt.
+
 % ---------------------------------------
-\subsubsection{TBD: Bindung}\label{sec:Bindung}
+\subsubsection{TBD: Bindungsstatus der Eltern}\label{sec:Bindungsstatus}
+
+
 Siehe auch AAS Einleitung von \citeA{Schmidt2004}.
 
 % ---------------------------------------
