--- a/header.tex
+++ b/header.tex
@@ -24,6 +24,7 @@
 \usepackage[onehalfspacing]{setspace} % Zeilenabstend
 \geometry{top=25.4mm, left=25.4mm, right=25.4mm, bottom=25.4mm}
 \usepackage{appendix}
+\usepackage{nicefrac} % Darstellung von Brüchen im Text e.g. 1/2
 %\usepackage{longtable}
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
